--- a/css/default.css
+++ b/css/default.css
@@ -3,6 +3,7 @@ body {
     font-size: 16px;
     margin: 0px auto 0px auto;
     width: 600px;
+    font-family : 'Helvetica Neue','sans-serif',cursive;
 }
 
 div#header {
@@ -29,7 +30,7 @@ div#header #navigation a {
     font-weight: bold;
     margin-left: 12px;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 div#footer {
